Bug 168646 - Preview widgets with issues in Win, GEN, KF5 and kf6, but not in GTK
Summary: Preview widgets with issues in Win, GEN, KF5 and kf6, but not in GTK
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords:
Depends on:
Blocks: KDE, KF5 Qt6
  Show dependency treegraph
 
Reported: 2025-10-01 18:18 UTC by Olivier Hallot
Modified: 2025-10-03 05:22 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2025-10-01 18:18:10 UTC
The preview widget CTL_PREVIEW and the text position object CTL_POSITION in

core/cui/uiconfig/ui/dimensionlinestabpage.ui

do not display extended tips (aka Accessible description) in GEN, kf5 and kf6 user interfaces, as well as in Windows.

Note: Extended tip for preview area updated from https://gerrit.libreoffice.org/c/core/+/191750

Step to reproduce
0) Enable extended tips in Tools - LibreOffice - General 
1) Open Draw
2) Draw a dimension line
3) Open Dimensions in context menu
4) Hover the preview area and the Text position area.

Current results:
The extended tip does not show in UI of win, gen, kf5 and kf6

But shows in GTK

Expected results: Work in all UI's

Additional information

Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: default; VCL: win
Locale: pt-BR (pt_BR); UI: pt-BR
Calc: threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d656704c791e8301d04b2e2caa6be13b564ce98
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: x11
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d656704c791e8301d04b2e2caa6be13b564ce98
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: kf6 (cairo+wayland)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d656704c791e8301d04b2e2caa6be13b564ce98
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: kf6 (cairo+wayland)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded

The extended tip works on GTK:

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d656704c791e8301d04b2e2caa6be13b564ce98
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2025-10-02 21:25:28 UTC
(In reply to Olivier Hallot from comment #0)
> Note: Extended tip for preview area updated from
> https://gerrit.libreoffice.org/c/core/+/191750

That is merged to master in the meanwhile, i.e. doesn't need to be applied separately.

> 2) Draw a dimension line

... which can be done using "Shape" -> "Insert" -> "Lines and Arrows" -> "Dimension Line"

Pending fix: https://gerrit.libreoffice.org/c/core/+/191801

(and some related changes in the series to make it work for the qt weld case as well, once native Qt widgets are used for that dialog)
Comment 2 Commit Notification 2025-10-02 23:49:02 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/736281573a9e59eb4c945077cb598d5fb98e2446

tdf#130857 tdf#168646 qt weld: Implement showing extended tips

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-10-02 23:49:05 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9adbd5a71dca00de4d2323883a01ae4e7c02dc97

tdf#168646 vcl: Forward unhandled tooltip event to base class

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-10-02 23:49:09 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca104ee50bcbe259ee8f1e206c4de78bccb482b1

tdf#130857 tdf#168646 qt weld: Call base class tooltip logic

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-10-03 05:22:45 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/f36e68a9085d02317997f64faedb685054d56589

tdf#168646 vcl: Forward unhandled tooltip event to base class

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.