tdf#168646 vcl: Forward unhandled tooltip event to base class

In VclDrawingArea::RequestHelp, if the drawing area specific
logic doesn't provide a tooltip text to show, call the base
class implementation, instead of returning without doing
anything.

This ensures that the extended tip logic implemented in
Window::RequestHelp is triggered as expected when
those are enabled.

Change-Id: I2918cc3377ec53e649d54cceaf0c9cb53effe58f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191801
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins
(cherry picked from commit 9adbd5a71dca00de4d2323883a01ae4e7c02dc97)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191804
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>